--- a/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list.component.html
@@ -1,9 +1,23 @@
 <div class="container">
-  <div class="row g-4">
+  <div class="row g-2">
     @for (pokemon of pokemons; track pokemon.name) {
     <div class="col-lg-2 col-md-4 col-sm-6 col-12">
       <app-pokemon-card [pokemon]="pokemon"></app-pokemon-card>
     </div>
     }
+  </div>
+  <div class="mt-2 d-flex justify-content-center">
+    <pagination
+      [totalItems]="totalItems"
+      [itemsPerPage]="itemsPerPage"
+      [(ngModel)]="currentPage"
+      (pageChanged)="loadPokemons($event)"
+      [maxSize]="5"
+      [boundaryLinks]="true"
+      previousText="&lsaquo;"
+      nextText="&rsaquo;"
+      firstText="&laquo;"
+      lastText="&raquo;"
+    ></pagination>
   </div>
 </div>
