--- a/src/app/components/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/components/pokemon-detail/pokemon-detail.component.html
@@ -1,11 +1,13 @@
 <div class="mb-4 d-flex justify-content-center align-items-center">
-  <button class="btn btn-warning" [routerLink]="['/list']">Return to list</button>
+  <button class="btn btn-warning" [routerLink]="['/list']">
+    Return to list
+  </button>
 </div>
 @if (pokemon) {
 <app-pokemon-card [pokemon]="pokemon"></app-pokemon-card>
 } @else if (loading) {
 <div class="d-flex justify-content-center">
-  <div class="spinner-border"></div>
+  <div class="spinner-border text-primary"></div>
 </div>
 } @else {
 <div class="d-flex justify-content-center">
