fix: detalle por name

--- a/src/app/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-card/pokemon-card.component.html
@@ -1,7 +1,7 @@
 <div
   class="card h-100 mx-auto"
   [class.hover-effect]="!showDetails"
-  [routerLink]="['/detail', pokemon.id]"
+  [routerLink]="['/detail', pokemon.name]"
 >
   <div class="d-flex flex-column flex-sm-row">
     <div class="w-100">
