--- a/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list.component.html
@@ -53,6 +53,10 @@
   ></pagination>
   <div><b>Total:</b> {{ totalItems }}</div>
 </div>
+} @else if (loading) {
+<div class="d-flex justify-content-center">
+  <div class="spinner-border text-primary"></div>
+</div>
 } @else {
 <div class="d-flex justify-content-center">
   <p class="text-danger">No Pokemon found</p>
